# sessionFlow-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  styles.css  tsconfig.json
.github/workflows/: release.yml
docs/: codex-usage-guide.md  release-guide.md  usage-guide.md
src/: App.vue  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: windres-wrapper.sh
src-tauri/icons/: icon.icns
src-tauri/src/: claude_history.rs  gemini_history.rs  history.rs  main.rs  opencode_history.rs
src-tauri/src/commands/: mod.rs  session.rs  sync.rs
