[package]
name = "sessionflow-desktop"
version = "1.0.0"
description = "SessionFlow Desktop — AI 编程助手会话历史可视化工具"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
dirs = "6"
toml = "0.8"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
